--- a/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
+++ b/MPfm/MPfm.Mac/Windows/XIB/MainWindow.xib
@@ -1744,9 +1744,9 @@
 																<int key="NSCellFlags">68157504</int>
 																<int key="NSCellFlags2">71304192</int>
 																<string key="NSContents">00:00.000</string>
-																<object class="NSFont" key="NSSupport" id="864744985">
+																<object class="NSFont" key="NSSupport" id="244699423">
 																	<string key="NSName">Menlo-Regular</string>
-																	<double key="NSSize">16</double>
+																	<double key="NSSize">15</double>
 																	<int key="NSfFlags">16</int>
 																</object>
 																<string key="NSCellIdentifier">_NS:1505</string>
@@ -1795,7 +1795,7 @@
 																<int key="NSCellFlags">68157504</int>
 																<int key="NSCellFlags2">272630784</int>
 																<string key="NSContents">00:00.000</string>
-																<reference key="NSSupport" ref="864744985"/>
+																<reference key="NSSupport" ref="244699423"/>
 																<string key="NSCellIdentifier">_NS:1505</string>
 																<reference key="NSControlView" ref="367090875"/>
 																<reference key="NSBackgroundColor" ref="429694360"/>
@@ -4305,6 +4305,30 @@
 						<reference key="destination" ref="841298689"/>
 					</object>
 					<int key="connectionID">780</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">viewLoopsHeader</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="947705286"/>
+					</object>
+					<int key="connectionID">781</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">viewMarkersHeader</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="509015098"/>
+					</object>
+					<int key="connectionID">782</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">viewSongBrowserHeader</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="367461428"/>
+					</object>
+					<int key="connectionID">783</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -6851,20 +6875,6 @@
 						<reference key="parent" ref="743098047"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">763</int>
-						<reference key="object" ref="43012111"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="339726618"/>
-						</object>
-						<reference key="parent" ref="807940356"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">764</int>
-						<reference key="object" ref="339726618"/>
-						<reference key="parent" ref="43012111"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">775</int>
 						<reference key="object" ref="593538448"/>
 						<object class="NSMutableArray" key="children">
@@ -6882,6 +6892,20 @@
 						<int key="objectID">778</int>
 						<reference key="object" ref="841298689"/>
 						<reference key="parent" ref="820365223"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">763</int>
+						<reference key="object" ref="43012111"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="339726618"/>
+						</object>
+						<reference key="parent" ref="807940356"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">764</int>
+						<reference key="object" ref="339726618"/>
+						<reference key="parent" ref="43012111"/>
 					</object>
 				</object>
 			</object>
@@ -7229,6 +7253,7 @@
 					<string>82.toolbarItem.selectable</string>
 					<string>83.CustomClassName</string>
 					<string>83.IBPluginDependency</string>
+					<string>84.CustomClassName</string>
 					<string>84.IBPluginDependency</string>
 					<string>85.IBPluginDependency</string>
 					<string>86.IBPluginDependency</string>
@@ -7624,6 +7649,7 @@
 					<boolean value="YES"/>
 					<string>SongPositionSlider</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>MPfmSliderCell</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -7641,7 +7667,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">780</int>
+			<int key="maxID">783</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -7668,6 +7694,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MPfmScrollView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MPfmSliderCell</string>
+					<string key="superclassName">NSSliderCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MPfmSliderCell.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -8002,10 +8036,13 @@
 							<string>viewLeft</string>
 							<string>viewLeftHeader</string>
 							<string>viewLibraryBrowser</string>
+							<string>viewLoopsHeader</string>
+							<string>viewMarkersHeader</string>
 							<string>viewNowPlaying</string>
 							<string>viewPitchShifting</string>
 							<string>viewRight</string>
 							<string>viewRightHeader</string>
+							<string>viewSongBrowserHeader</string>
 							<string>viewSongPosition</string>
 							<string>viewTimeShifting</string>
 							<string>viewVolume</string>
@@ -8074,6 +8111,9 @@
 							<string>NSTextField</string>
 							<string>NSTextField</string>
 							<string>NSTextField</string>
+							<string>MPfmView</string>
+							<string>MPfmView</string>
+							<string>MPfmView</string>
 							<string>MPfmView</string>
 							<string>MPfmView</string>
 							<string>MPfmView</string>
@@ -8157,10 +8197,13 @@
 							<string>viewLeft</string>
 							<string>viewLeftHeader</string>
 							<string>viewLibraryBrowser</string>
+							<string>viewLoopsHeader</string>
+							<string>viewMarkersHeader</string>
 							<string>viewNowPlaying</string>
 							<string>viewPitchShifting</string>
 							<string>viewRight</string>
 							<string>viewRightHeader</string>
+							<string>viewSongBrowserHeader</string>
 							<string>viewSongPosition</string>
 							<string>viewTimeShifting</string>
 							<string>viewVolume</string>
@@ -8432,6 +8475,14 @@
 								<string key="candidateClassName">MPfmView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
+								<string key="name">viewLoopsHeader</string>
+								<string key="candidateClassName">MPfmView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">viewMarkersHeader</string>
+								<string key="candidateClassName">MPfmView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
 								<string key="name">viewNowPlaying</string>
 								<string key="candidateClassName">MPfmView</string>
 							</object>
@@ -8445,6 +8496,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">viewRightHeader</string>
+								<string key="candidateClassName">MPfmView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">viewSongBrowserHeader</string>
 								<string key="candidateClassName">MPfmView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
@@ -8464,14 +8519,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MainWindowController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSTableRowView</string>
-					<string key="superclassName">NSView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSTableRowView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
